# sciona-atoms-dl

./: README.md  pyproject.toml
data/: audit_manifest.json
data/references/: registry.json
data/review_bundles/: dl_adversarial.review_bundle.json  dl_architectures.review_bundle.json  dl_back_translation.review_bundle.json  dl_detection.review_bundle.json  dl_embeddings.review_bundle.json  (+8 more)
tests/: test_dl_adversarial_behavior.py  test_dl_architectures_behavior.py  test_dl_architectures_references_metadata.py  test_dl_architectures_review_bundle.py  test_dl_back_translation_behavior.py  test_dl_back_translation_references_metadata.py  test_dl_back_translation_review_bundle.py  test_dl_detection_behavior.py  test_dl_detection_references_metadata.py  test_dl_detection_review_bundle.py  test_dl_embeddings_behavior.py  test_dl_embeddings_references_metadata.py  test_dl_embeddings_review_bundle.py  test_dl_graph_behavior.py  test_dl_image_augmentation_behavior.py  test_dl_image_augmentation_references_metadata.py  test_dl_image_augmentation_review_bundle.py  test_dl_loss_behavior.py  test_dl_loss_references_metadata.py  test_dl_loss_review_bundle.py  test_dl_recommender_behavior.py  test_dl_segmentation_behavior.py  test_dl_segmentation_references_metadata.py  test_dl_segmentation_review_bundle.py  test_dl_skeletonization_behavior.py  test_dl_skeletonization_references_metadata.py  test_dl_skeletonization_review_bundle.py  test_dl_tabular_behavior.py  test_dl_time_series_behavior.py  test_dl_torch_ports.py  test_dl_training_behavior.py  test_dl_video_temporal_behavior.py
(+76 files in other folders)
